# cookiecutter-make-dag

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  README.md  config.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  _project.py  commands.py
